# Guardzilla

./: LICENSE  Procfile  README.md  app.py  blockedWords.json  bot.json  bot_admin.json  commands.json  keep_alive.py  main.py  prefix.json  pyproject.toml  requirements.txt  shorts.json  suggestions.json  tempCodeRunnerFile.python  tickets.json  warns.json  webserver.py
commands/: add-bad-words.py  addBadWords.py  ban.py  button-link.py  chat-filter.py  chatFilter.py  clear.py  embed.py  h.py  help.py  hide.py  kick.py  load.py  lock.py  log.py  mkshort.py  mute.py  nick.py  on-error.py  on-guild-join.py  on-message.py  on-reaction.py  onError.py  onMessage.py  ping.py  reaction-role.py  reactionRole.py  reload.py  remove-bad-words.py  removewarn.py  set-prefix.py  show-bad-words.py  show.py  showBadWords.py  suggest-room.py  suggestionRoom.py  ticket.py  unban.py  unload.py  unlock.py  (+3 more)
